revise docker file